--- a/src/main/resources/templates/alquileres.html
+++ b/src/main/resources/templates/alquileres.html
@@ -15,7 +15,7 @@
                 <div class="position-sticky pt-3">
                     <div class="text-center mb-4">
                         <h4 class="text-white">
-                            <i class="fas fa-film"></i> Alquiler Películas
+                            <i class="fas fa-film"></i> Películas en Alquiler
                         </h4>
                     </div>
                     <ul class="nav flex-column">
